Commit at 2019-08-25 HH:55:42

--- a/source/_posts/readList-2016-06-01.md
+++ b/source/_posts/readList-2016-06-01.md
@@ -2,7 +2,7 @@
 title: readList 2016.06.01
 date: 2016-06-02 14:53:47
 tags: [readlist, F2E]
-categories: [readlist]
+categories: [ReadList]
 ---
 
 转眼进入六月了，在开个readlist ，把一些看过的网上资料，总结于此！
@@ -10,7 +10,7 @@ categories: [readlist]
 <!-- more -->
 
 ## 2016-06-02 
-  
+
   1. [影厅座位预览效果（css3）](http://www.jcodecraeer.com/a/qianduankaifa/css3/2016/0602/4322.html) 通过 `transform-style: preserve-3d`属性实现:选座后的视角变化！  [Github](https://github.com/codrops/SeatPreview)
 
   2. [React 学习指南](http://guoyongfeng.github.io/idoc/html/React%E8%AF%BE%E7%A8%8B%E4%B8%93%E9%A2%98/React%E5%AD%A6%E4%B9%A0%E6%8C%87%E5%8D%97.html)
@@ -20,9 +20,11 @@ categories: [readlist]
 ## 2016-06-03
 
   1. [nodejs上传整个文件夹](https://cnodejs.org/topic/574e9e856e66e53930827697)
+
     >`<input id="file" type="file" directory mozDirectory webkitDirectory />` [Demo](http://jsbin.com/retoxesoya/1/edit?html,js,output)
 
   2. [深入理解Node.js：核心思想与源码分析](https://yjhjstz.gitbooks.io/deep-into-node/content/) 【电子书】
+
     >深入理解Node.js：核心思想与源码分析
 
   3. [react native redux FeInn 从零到1让你学会搭建一个APP](https://github.com/febobo/react-native-redux-FeInn)
